--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="user-scalable=0, initial-scale=1, minimum-scale=1, width=device-width, height=device-height">
     <meta name="description" content="Leading mobile games publisher. Team of passionate mobile experts located in Paris, dedicated to publishing hyper-casual games.">
-    <title>greenpanda</title>
+    <title>Green Panda Games</title>
     <script src="https://unpkg.com/vue-i18n/dist/vue-i18n.js"></script>
     <script src="https://www.google.com/recaptcha/api.js?onload=vueRecaptchaApiLoaded&render=explicit" async defer></script>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
